# rustmemodb

./: .gitignore  CLIENT_API_GUIDE.md  Cargo.toml  PERSIST_PROGRESS.md  PRODUCTION_READINESS_ANALYSIS.md  README.md  perf_suite_runner.sh
docs/: DEVELOPER_GUIDE.md  PERSIST_PROGRESS.md  PRODUCTION_READINESS_ANALYSIS.md  book.toml
documentations/: QUICKSTART.md  SHORT_DOCUMENTATION.md
education/habit-hero-ab/lesson1/product-api/: .env.example  Cargo.toml
education/habit-hero-ab/lesson1/product-api/src/: config.rs  main.rs
education/habit-hero-ab/lesson1/product-api/src/application/: dto.rs  user_service.rs
education/habit-hero-ab/lesson1/product-api/src/domain/: user.rs
education/habit-hero-ab/lesson1/product-api/src/infrastructure/: persist_user_store.rs
education/habit-hero-ab/lesson1/product-api/tests/: contract_create_user.rs  email_uniqueness_across_instances.rs
education/habit-hero-ab/lesson2/classic-api/: Cargo.toml
education/habit-hero-ab/lesson2/classic-api/src/: main.rs
education/habit-hero-ab/lesson2/classic-api/src/application/: dto.rs  mod.rs  user_service.rs
education/habit-hero-ab/lesson2/classic-api/src/domain/: errors.rs  user.rs
education/habit-hero-ab/lesson2/classic-api/src/infrastructure/: in_memory_user_repository.rs  mod.rs  postgres_user_repository.rs
education/habit-hero-ab/lesson2/classic-api/src/interface/http/: users_handler.rs
education/habit-hero-ab/lesson2/classic-api/tests/: contract_create_user.rs
education/habit-hero-ab/lesson4/: Cargo.toml  README.md
education/habit-hero-ab/lesson4/classic-api/: .env.example  README.md
education/habit-hero-ab/lesson4/classic-api/migrations/: 0001_init.sql
education/habit-hero-ab/lesson4/classic-api/src/: app.rs
education/habit-hero-ab/lesson4/classic-api/src/application/: dto.rs  user_service.rs
education/habit-hero-ab/lesson4/classic-api/src/domain/: user.rs
education/habit-hero-ab/lesson4/classic-api/src/infrastructure/: in_memory_user_repository.rs  mod.rs  postgres_user_repository.rs
education/habit-hero-ab/lesson4/classic-api/src/interface/http/: mod.rs  users_handler.rs
education/habit-hero-ab/lesson4/classic-api/tests/: contract_create_user.rs
education/habit-hero-ab/lesson4/openapi/: habit-hero.v1.yaml
education/habit-hero-ab/lesson4/product-api/: .env.example  README.md
education/habit-hero-ab/lesson4/product-api/src/: config.rs  lib.rs  main.rs
education/habit-hero-ab/lesson4/product-api/src/application/: dto.rs  mod.rs  user_service.rs  user_workspace.rs
education/habit-hero-ab/lesson4/product-api/src/domain/: user.rs
education/habit-hero-ab/lesson4/product-api/src/interface/http/: users_handler.rs
education/habit-hero-ab/lesson4/product-api/tests/: contract_create_user.rs  email_uniqueness_across_instances.rs
education/habit-hero-ab/lesson4/scripts/: lesson1_smoke.sh  lesson4_smoke.sh
education/habit-hero-ab/lesson4/shared-tests/src/: lib.rs
examples/: basic_demo.rs  benchmark_vs_postgres.rs  client_api.rs  connection_pooling.rs  json_storage_demo.rs  persistence_demo.rs  quickstart.rs  todo_app.rs  transactions.rs  transactions_example.rs  user_management.rs
examples/agile_board/: .gitignore  Cargo.toml  README.md
examples/agile_board/src/: main.rs  model.rs
examples/agile_board/tests/: http_api.rs
examples/gamemaster/: Cargo.toml  README.md
examples/gamemaster/src/: domain.rs  main.rs  service.rs  web.rs
examples/managed/persist_showcase/: Cargo.toml  README.md
examples/managed/persist_showcase/src/: main.rs
examples/managed/todo_persist_runtime/: .gitignore  Cargo.toml  README.md
examples/managed/todo_persist_runtime/scripts/: failover_demo.sh
examples/managed/todo_persist_runtime/src/: lib.rs  macro_showcase.rs
examples/managed/todo_persist_runtime/tests/: http_smoke.rs  macro_showcase.rs
examples/no_db_api/: Cargo.toml  README.md
examples/no_db_api/no_db_data/: users.snapshot.json
examples/no_db_api/schemas/: users.json
examples/no_db_api/src/: main.rs
examples/no_db_api/tests/: http_api.rs
examples/pulse_studio/: Cargo.toml  README.md
examples/pulse_studio/src/: main.rs  model.rs
examples/pulse_studio/tests/: domain_model.rs  http_api.rs
examples/scheduler/: Cargo.toml
examples/scheduler/scheduler_db/: tasks.snapshot.json
examples/scheduler/src/: main.rs  model.rs  scheduler.rs  web.rs
examples/scheduler_classic/: .env  Cargo.toml  docker-compose.yml
examples/scheduler_classic/migrations/: 20240215000000_init_schema.sql
examples/scheduler_classic/src/: main.rs  model.rs  scheduler.rs  web.rs
examples/scheduler_classic/static/: index.html
examples/sentinel_core/: Cargo.toml
examples/sentinel_core/src/: main.rs  telemetry.rs
examples/todo_backend_postgresql/: .env.example  Cargo.toml  Makefile  README.md  docker-compose.yml
examples/todo_backend_postgresql/migrations/: 0002_indexes.sql
examples/todo_backend_postgresql/scripts/: dev-up.sh  migrate-up.sh  test-with-postgres.sh
examples/todo_backend_postgresql/src/: app.rs  config.rs  error.rs  main.rs  models.rs  repository.rs
examples/todo_backend_postgresql/tests/: postgres_repository.rs
llm/: GOAL_ALIGNMENT_CHARTER.md  GOAL_EXECUTION_PLAYBOOK.md
pulse_studio_data/: workspaces.snapshot.json  workspaces__audit.snapshot.json  workspaces__rest_idempotency.snapshot.json
rustmemodb_derive/: Cargo.toml
rustmemodb_derive/src/: api_service_impl.rs  lib.rs  omni_entity.rs  omni_value.rs
scripts/: collect_autonomy_metrics.sh  enforce_autonomy_protocol.sh  guard_lesson4_no_persistence_leak.sh
sentinel_data/: metrics_store.snapshot.json  security_events.snapshot.json  system_config.snapshot.json
src/: backup_main.rs  interface.rs  lib.rs  load_test.rs  main.rs  prelude.rs
tests/: aggregate_functions_tests.rs  ai_memory_phase1_incident_replay_tests.rs  ai_memory_phase1_usage_tests.rs  benchmark_suite.rs  client_api_tests.rs  complex_queries_tests.rs  concurrent_access_tests.rs  constraints_tests.rs  cte_tests.rs  data_types_tests.rs  ddl_dml_tests.rs  distinct_tests.rs  dx_contract_compile_tests.rs  explain_tests.rs  (+53 more)
(+379 files in other folders)
