[package]
name = "rustmemodb"
version = "0.1.0"
edition = "2024"
authors = ["Maxim Bogovic <bogovick@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "In-memory SQL database with transaction support, connection pooling, and MVCC"
readme = "README.md"
homepage = "https://github.com/maxBogovick/rustmemodb"
repository = "https://github.com/maxBogovick/rustmemodb"
keywords = ["database", "sql", "in-memory", "transactions", "mvcc"]
categories = ["database", "database-implementations"]

[lib]
name = "rustmemodb"
path = "src/lib.rs"

[[bin]]
name = "rustmemodb"
path = "src/main.rs"
required-features = []

[dependencies]
thiserror = "2.0.17"
sqlparser = "0.59.0"
regex = "1.12.2"
lru = "0.16.2"
lazy_static = "1.5.0"
bcrypt = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"      # MessagePack for compact binary serialization
tempfile = "3.8"       # For atomic writes
