[package]
name = "rustmemodb_derive"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Derive macros for rustmemodb persistence layer"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
