[package]
name = "agile_board"
version = "0.1.0"
edition = "2021"

[dependencies]
rustmemodb = { path = "../../" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = "0.5"
