[package]
name = "no_db_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[dependencies.rustmemodb]
path = "../../"
features = ["unistructgen"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
