[package]
name = "scheduler_classic"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "time", "uuid"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] } # Actually let's use chrono for consistency with valid sqlx feature
dotenvy = "0.15"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["fs", "trace"] }
