[package]
name = "sentinel_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rustmemodb = { path = "../../" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
crossterm = "0.27"
async-trait = "0.1" # Added for PersistModel derive
