[package]
name = "persist_showcase"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rustmemodb = { path = "../../.." }
