[package]
name = "todo_persist_runtime"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
rustmemodb = { path = "../../.." }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.8"
tower = { version = "0.5", features = ["util"] }
