[package]
name = "habit_hero_product_api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy = "0.15"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rustmemodb = { path = "../../../.." }

[dev-dependencies]
habit_hero_shared_tests = { path = "../shared-tests" }
tempfile = "3.8"
